data/derived/comb/progs/unify/prog6569.ml.out
Characters 90-96:
  |x when x>=10->(x/10)@((x mod 10)+(mulByDigit i t))
                 ^^^^^^
Error: This expression has type int but an expression was expected of type
         'a list
